<resources>
    <string name="app_name">queuee user</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="nav_1">Home</string>
    <string name="nav_2">List</string>
    <string name="nav_3">History</string>
    <string name="nav_4">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!--for menu-->
    <string name="btn_done">done</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_queue">queue now</string>
    <string name="tv_note">Note</string>
    <string name="tv_problem">Problem :</string>
    <string name="settings">Settings</string>
    <string name="save">SAVE</string>
    <string name="queue">QUEUE</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_name">Full Name</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_confirm_password">Confirm Password</string>
    <string name="tv_current_password">Current Password</string>
    <string name="tv_new_password">New Password</string>
    <string name="tv_date">Birth</string>
    <string name="tv_ClinicInfo">Clinic Info</string>
    <string name="tv_ClinicName">Clinic Name</string>
    <string name="tv_address">Address</string>
    <string name="tv_time">Estimate Time</string>
    <string name="tv_phone">Phone</string>
    <string name="btn_logout">log out</string>
    <string name="tv_error_not_found">Not Found</string>
    <string name="tv_ETA">ETA</string>
    <string name="tv_total_queue">Total Queue</string>
    <string name="tv_on_progress">On progress</string>

    <string name="offline">offline</string>

</resources>
