<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/nav_1"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_2"
        android:enabled="true"
        android:icon="@drawable/list"
        android:title="@string/nav_2"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_3"
        android:enabled="true"
        android:icon="@drawable/history"
        android:title="@string/nav_3"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_4"
        android:enabled="true"
        android:icon="@drawable/set"
        android:title="@string/nav_4"
        app:showAsAction="always" />


</menu>