<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/small_hor_padd"
    tools:context=".Activity.ChangePassword">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/tv_current_password"/>
    <EditText
        android:id="@+id/tvEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#2980b9"
        android:inputType="textPassword"
        android:text=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/tv_new_password"/>
    <EditText
        android:id="@+id/tvEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#2980b9"
        android:inputType="textPassword"
        android:text=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/tv_confirm_password"/>
    <EditText
        android:id="@+id/tvEditText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="#2980b9"
        android:inputType="textPassword"
        android:text=""/>
    <Button
        android:id="@+id/btnSave"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBtnDisable"
        android:text="@string/save"/>
</LinearLayout>