<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#c6e2ed"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.SettingFrag">

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?android:attr/actionBarSize"-->
        <!--android:background="@color/colorPrimary"-->
        <!--app:contentInsetStart="0dp"-->
        <!--android:id="@+id/toolbar">-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/settings"-->
            <!--android:gravity="center_vertical"-->
            <!--android:textColor="#FFF"-->
            <!--android:textStyle="bold"-->
            <!--style="@style/Base.TextAppearance.AppCompat.Large"-->
            <!--android:textAlignment="center"/>-->
    <!--</android.support.v7.widget.Toolbar>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:text="My Account"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgNow"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/small_ver_mar"
                android:layout_marginBottom="@dimen/vsmall_ver_mar"
                app:civ_circle_background_color="#FFF"
                app:civ_border_width="1dp"
                app:civ_border_color="#000"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorNoLinkText" />

            <LinearLayout
                android:id="@+id/llName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                style="@style/MyTheme_SettingBarStyle">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/tv_name"/>
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#bebebe"
                    android:text="Ricky"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                style="@style/MyTheme_SettingBarStyle">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/tv_email"/>
                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorLinkText"
                    android:text="rickymartin782@gmail.com"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/llPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                style="@style/MyTheme_SettingBarStyle">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/tv_password"/>
                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorLinkText"
                    android:text="*******************"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                style="@style/MyTheme_SettingBarStyle">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/tv_phone"/>
                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorLinkText"
                    android:text=""/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/MyTheme_SettingBarStyle">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/tv_gender"/>
                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="#bebebe"
                    android:text="Male"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:text="@string/btn_logout"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/small_ver_mar"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/colorNegative" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>