<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipeRefresh"
    tools:context=".Activity.QueueDetailActivity">

   <android.support.constraint.ConstraintLayout
       android:layout_width="match_parent"
       android:padding="@dimen/vsmall_ver_padd"
       android:layout_height="match_parent">
       <de.hdodenhof.circleimageview.CircleImageView
           android:id="@+id/imgNow"
           android:layout_width="150dp"
           android:layout_height="100dp"
           android:src="@drawable/profile"
           android:layout_gravity="center"
           android:layout_marginTop="@dimen/vsmall_ver_mar"
           android:layout_marginBottom="@dimen/vsmall_ver_mar"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintLeft_toLeftOf="parent"
           app:civ_border_width="1dp"
           android:elevation="4dp"
           app:civ_border_color="@android:color/white"/>

       <TextView
           android:id="@+id/tvCName"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/tv_ClinicName"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toTopOf="@+id/imgNow"
           app:layout_constraintLeft_toRightOf="@+id/imgNow"
           style="@style/TextAppearance.AppCompat.Medium" />

       <TextView
           android:id="@+id/tvAddress"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:text="@string/tv_address"
           android:layout_marginTop="@dimen/vsmall_ver_mar"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tvCName"
           app:layout_constraintLeft_toRightOf="@+id/imgNow" />

       <android.support.v7.widget.CardView
           android:id="@+id/cv"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:cardCornerRadius="@dimen/vsmall_hor_mar"
           android:layout_marginTop="@dimen/small_ver_mar"
           android:layout_marginLeft="@dimen/vsmall_hor_mar"
           android:layout_marginRight="@dimen/vsmall_hor_mar"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/imgNow"
           app:layout_constraintRight_toRightOf="parent">
           <android.support.constraint.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="0dp"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintBottom_toBottomOf="@+id/tvNumNow"
                   android:background="@color/colorPrimary"
                   />
               <TextView
                   android:id="@+id/tvNumNow"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="5"
                   android:textSize="30sp"
                   android:textColor="@android:color/white"
                   android:textAlignment="center"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintRight_toRightOf="parent"
                   android:padding="@dimen/vsmall_ver_padd"
                   style="@style/Base.TextAppearance.AppCompat.Large"/>

               <TextView
                   android:id="@+id/tvETA"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   style="@style/Base.TextAppearance.AppCompat.Large"
                   android:textAlignment="center"
                   android:text="@string/tv_ETA"
                   android:layout_marginTop="@dimen/vsmall_ver_mar"
                   app:layout_constraintLeft_toRightOf="@+id/tvTotalQueue"
                   app:layout_constraintBottom_toBottomOf="@+id/tvTotalQueue"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintTop_toBottomOf="@+id/tvNumNow"/>

               <TextView
                   android:id="@+id/tvTotalQueue"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   style="@style/Base.TextAppearance.AppCompat.Large"
                   android:textAlignment="center"
                   android:text="@string/tv_total_queue"
                   app:layout_constraintRight_toLeftOf="@+id/tvETA"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintTop_toTopOf="@+id/tvETA"/>

               <TextView
                   android:id="@+id/tvETANum"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   style="@style/Base.TextAppearance.AppCompat.Large"
                   android:textAlignment="center"
                   android:text="12"
                   android:textSize="26sp"
                   android:textColor="@color/colorPrimary"
                   android:layout_marginTop="@dimen/vsmall_ver_mar"
                   android:layout_marginBottom="@dimen/vsmall_ver_mar"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintRight_toRightOf="parent"
                   app:layout_constraintLeft_toLeftOf="@+id/tvETA"
                   app:layout_constraintTop_toBottomOf="@+id/tvETA"/>

               <TextView
                   android:id="@+id/tvTotalQueueNum"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   style="@style/Base.TextAppearance.AppCompat.Large"
                   android:textAlignment="center"
                   android:text="12"
                   android:textColor="@color/colorPrimary"
                   android:textSize="26sp"
                   app:layout_constraintTop_toTopOf="@+id/tvETANum"
                   app:layout_constraintLeft_toLeftOf="parent"
                   app:layout_constraintBottom_toBottomOf="@+id/tvETANum"
                   app:layout_constraintRight_toRightOf="@+id/tvTotalQueue"/>
           </android.support.constraint.ConstraintLayout>
       </android.support.v7.widget.CardView>

       <TextView
           android:id="@+id/tvNote"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           style="@style/TextAppearance.AppCompat.Medium"
           android:layout_marginTop="@dimen/small_ver_mar"
           app:layout_constraintTop_toBottomOf="@+id/cv"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           android:text="@string/tv_note"/>

       <EditText
           android:id="@+id/editTextNote"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:ems="10"
           android:inputType="textMultiLine"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tvNote" />

       <Button
           android:id="@+id/btnQueue"
           android:layout_width="0dp"
           android:text="@string/btn_queue"
           android:textColor="@android:color/white"
           android:layout_height="wrap_content"
           style="@style/Base.TextAppearance.AppCompat.Large"
           android:background="@drawable/custom_button_orange"
           app:layout_constraintLeft_toLeftOf="parent"
           app:layout_constraintRight_toRightOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"/>
   </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.SwipeRefreshLayout>